# device-security-software-services

./: README.md  Security.md  build-dependencies.bat  build-dependencies.sh  build.gradle  build_ubuntu.sh  config.txt  license.txt  settings.gradle
CommandCore/: build.gradle
CryptoCore/: build.gradle
FCS/: Makefile  README.md  build_gtest.sh  license.txt
FCS/FCSFilter/include/: FcsException.h  altera_fcs-ioctl.h  altera_fcs-lib.h  altera_fcs_structs.h
FCS/FCSFilter/src/: CommandHeader.cpp  CommandHeader.h  FcsCommunication.cpp  FcsCommunication.h  FcsCommunicationFcsIoctl.cpp  FcsCommunicationFcsIoctl.h  FcsCommunicationFcsLib.cpp  FcsCommunicationFcsLib.h  Logger.cpp  Logger.h  MessageHandler.cpp  MessageHandler.h  Qspi.cpp  Qspi.h  VerifierProtocol.cpp  VerifierProtocol.h  utils.h
FCS/FCSFilter/test/: CommandHeaderUT.cpp  FcsCommunicationFcsIoctlUT.cpp  FcsCommunicationFcsLibUT.cpp  FcsCommunicationUT.cpp  VerifierProtocolUT.cpp  utilsUT.cpp
FCS/FCSFilter/test/mocks/: FcsSimulator.cpp  FcsSimulator.h  fcntl.cpp  fcntl.h  fcsMock.cpp
FCS/FCSFilter/test/mocks/sys/: ioctl.cpp  ioctl.h
FCS/FCSServer/: install.sh
FCS/FCSServer/src/: TcpServer.cpp  TcpServer.h  main.cpp
FCS/docker/: Dockerfile
ProtocolCore/: build.gradle
ServiceCore/: build.gradle
TestLibrary/: build.gradle
TestLibrary/src/main/resources/testfiles/: signed_UDS_intelpuf_sdm15_with_wrong_version_sdm12.ccert  signed_bbram_aes.ccert  signed_efuse_aes.ccert  signed_efuse_aes_wrong.ccert  signed_efuse_sdm15_with_wrong_version_sdm12.ccert  signed_efuse_wrapped_aes_sdm15.ccert  signed_iid_sdm12_with_wrong_version_sdm15.ccert
Utils/: build.gradle
Verifier/: README.md  build.gradle  verifier_third_party_licenses.md
Verifier/src/integrationTest/resources/: config.properties
Verifier/src/test/resources/: logback.xml
Verifier/src/test/resources/config/: config_with_all_set.properties  config_with_empty_optional.properties  config_with_root_hash_whitespaces.properties
admintools/bkps/bkps/: __init__.py  runner-config.json  runner.py  sample_Agilex.json  sample_AgilexB.json  sample_EasicN5X.json  sample_S10.json
admintools/bkps/bkps/Modules/: CliMapper.py  Commands.py  Configurator.py  Encryptor.py  RequestMethodMapper.py  Requester.py  Utilities.py  __init__.py
bkpprogrammer/: .gitignore  BullseyeCoverageExclusions  CMakeLists.txt  README.md  build.sh  config.txt  valgrind.sh
bkpprogrammer/docker/: Dockerfile  build-ext.sh
bkpprogrammer/licenses/: third_party_licenses.md
bkpprogrammer/src/: CMakeLists.txt
bkpprogrammer/src/bkp_app/: CMakeLists.txt  Context.cpp  Context.h  Puf.cpp  Puf.h  Puf_sdm_1_5.cpp  bkp_options.txt  dependencies.txt.in  main.cpp
bkpprogrammer/src/bkp_app_test/: CMakeLists.txt  Puf_test.cpp  dependencies.txt.in  main.cpp
bkpprogrammer/src/core/: CMakeLists.txt
bkpprogrammer/src/core/cpp/: bkp_master.cpp  logger.cpp  pgm_plugin_bkp_export.cpp
bkpprogrammer/src/core/cpp/network/: network_message.cpp  network_wrapper.cpp
bkpprogrammer/src/core/cpp/quartus/: jtag_helper.cpp
bkpprogrammer/src/core/cpp/utils/: base64_utils.cpp  bkp_exception.cpp  string_utils.cpp  transaction_id_manager.cpp
bkpprogrammer/src/core/headers/: bkp_master.h  glibc_redirection.h  logger.h  pgm_plugin_bkp_export.h  version.h.in
bkpprogrammer/src/core/headers/network/: network_config.h  network_message.h  network_wrapper.h
bkpprogrammer/src/core/headers/network/messages/: get_next.h  prefetch_next.h  puf_activate_next.h  set_authority_next.h
bkpprogrammer/src/core/headers/quartus/: jtag_helper.h  protected_memory.h
bkpprogrammer/src/core/headers/utils/: base64_utils.h  bkp_exception.h  common_defs.h  string_utils.h  structures.h  transaction_id_manager.h
bkpprogrammer/src/core_test/: CMakeLists.txt  dependencies.txt.in
bkpprogrammer/src/core_test/cpp/: bkp_master_test.cpp  bkp_provision_test.cpp  logger_test.cpp
bkpprogrammer/src/core_test/cpp/network/: network_message_test.cpp  network_wrapper_test.cpp
bkpprogrammer/src/core_test/cpp/quartus/: jtag_helper_test.cpp  protected_memory_test.cpp
bkpprogrammer/src/core_test/cpp/utils/: base64_utils_test.cpp  bkp_exception_test.cpp  string_utils_test.cpp  transaction_id_manager_test.cpp
bkpprogrammer/src/core_test/headers/: bkp_master_test.h  bkp_provision_test.h  logger_test.h
bkpprogrammer/src/core_test/headers/mocks/: mocked_logger.h  mocked_quartus.h  mocked_transaction_id_manager.h
bkpprogrammer/src/core_test/headers/quartus/: jtag_helper_test.h  protected_memory_test.h
bkpprogrammer/src/core_test/headers/utils/: base64_utils_test.h  bkp_exception_test.h  string_utils_test.h  transaction_id_manager_test.h
bkps/: README.md  bkps_third_party_licenses.md  build.gradle  gradle.properties
bkps/src/integrationTest/resources/config/: application.yml
bkps/src/integrationTest/resources/testfiles/: IPCS.cer  IPCS.crl  IPCSSigningCA.cer  IPCSSigningCA.crl  IPCS_agilex.crl  IPCS_agilex_L1.crl  aes_key_sdm1_5_ver2.txt  aes_testmode1.qek  attestation_5ADF841DDEAD944E_00000002.cer  bkp_22d4ef4bd6a4d748.cer  bkp_iid_22d4ef4bd6a4d748.cer  deviceid_22d4ef4bd6a4d748_5F7W2AjE8X0r63GWyFq8yCrBAJY.cer  deviceider_22d4ef4bd6a4d748.cer  deviceider_22d4ef4bd6a4d748.pem  firmware_22d4ef4bd6a4d748.cer  iiduds_22d4ef4bd6a4d748_4qn3XIBaW0e8pvKcZGG-zwhyxRk.cer  signed_UDS_intelpuf_wrapped_aes_testmode1.ccert  signed_iid_aes.ccert
bkps/src/main/resources/: .h2.server.properties  logback-spring.xml
bkps/src/main/resources/config/: application-aws.yml  application-bouncycastle.yml  application-ci.yml  application-dev.yml  application-luna.yml  application-prod.yml  application-staticbouncycastle.yml  application.yml
bkps/src/test/resources/: logback.xml
fpgaCertCore/: build.gradle
gradle/: common.gradle  libs.versions.toml  liquibase.gradle  profile_dev.gradle  profile_prod.gradle
spdm_wrapper/: CMakeLists.txt  README.md  config.txt
spdm_wrapper/wrapper/: CMakeLists.txt  main.cpp  main.h
workload/: build.gradle  workload_third_party_licenses.md
workload/src/main/resources/: logback.xml
(+1886 files in other folders)
